# heal-sync

./: .example_env  .gitignore  Dockerfile  README.md  app.py  chainlit.md  pyproject.toml  requirements.txt  streamlit_app.py
data/: Instruments_Definitions.xlsx  adult-demographics-cdes.xlsx  bpi-pain-severity-cdes.xlsx  generalized-anxiety-disorder-7-cde.xlsx  patient-health-questionnaire-8-cde.xlsx  patient-health-questionnaire-9-cde.xlsx
example_files/docx/: Protocol_NOAPS v1.0.docx  Protocol_PKAS v1.0.docx  Protocol_PPMT v1.0.docx
initial_embeddings/: CDE_domains_CRFs_elements v1.0 mod.xlsx  gad2-cdes.xlsx  pediatric-demographic-cdes.xlsx  pgis-cdes.xlsx
initial_embeddings overflow/: bpi-pain-severity-7d-cde-pediatric.xlsx  nida-modified-assist-cdes.xlsx  pgic-cdes.xlsx  phq2-cdes.xlsx
