[project]
name = "heal-sync"
version = "0.1.0"
description = "heal-sync"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
"PyMuPDF",
"chainlit",
"huggingface_hub",
"langchain",
"langchain-community",
"langchain-core",
"langchain-huggingface",
"langchain-openai",
"langchain-qdrant",
"langchain-text-splitters",
"langgraph",
"langsmith",
"lxml",
"nltk",
"openai",
"openpyxl",
"pymupdf",
"qdrant-client",
"sentence-transformers",
"snowflake-connector-python",
"streamlit",
"torch",
"tqdm",
"transformers",
"unstructured",
"websockets",
"langchain_experimental",
#not used
#"langchain-experimental",
#"accelerate",
#"ipykernel",
#"iprogress",
#"ipywidgets",
#"pypdf2",
#"ragas",
#"wandb",
]
